Changes
=======

1.3.1 (unreleased)
------------------

- TBD

1.3.0 (2012-05-16)
------------------

- Added Sphinx API docuementation.

- Added explicit support for PyPy.

- Dropped use of Python3-impatible ``zope.interface.implements`` class
  advisor in favor of ``zope.interface.implementer`` class decorator.

- Added support for continuous integration using ``tox`` and ``jenkins``.

- Added ``setup.py docs`` alias (installs ``Sphinx`` and dependencies).

- Added ``setup.py dev`` alias (runs ``setup.py develop`` plus installs
  ``nose`` and ``coverage``).

- Python 3.3 compatibility.

- Fix "for attempt in transaction.attempts(x)" machinery, which would not
  retry a transaction if its implicit call to ``.commit()`` itself raised a
  transient error.  Symptom: seeing conflict errors even though you thought
  you were retrying some number of times via the "attempts" machinery (the
  first attempt to generate an exception during commit would cause that
  exception to be raised).

1.2.0 (2011-12-05)
------------------

New Features:

- Python 3.2 compatibility.

- Dropped Python 2.4 and 2.5 compatibility (use 1.1.1 if you need to use
  "transaction" under these Python versions).

1.1.1 (2010-09-16)
------------------

Bug Fixes:

- Code in ``_transaction.py`` held on to local references to traceback
  objects after calling ``sys.exc_info()`` to get one, causing
  potential reference leakages.

- Fixed ``hexlify`` NameError in ``transaction._transaction.oid_repr``
  and add test.

1.1.0 (1010-05-12)
------------------

New Features:

- Transaction managers and the transaction module can be used with the
  with statement to define transaction boundaries, as in::

     with transaction:
         ... do some things ...

  See transaction/tests/convenience.txt for more details.

- There is a new iterator function that automates dealing with
  transient errors (such as ZODB confict errors). For example, in::

     for attempt in transaction.attempts(5):