@@ -4,7 +4,11 @@ Changes
 1.3.1 (unreleased)
 ------------------
 
-- TBD
+- When a non-retryable exception was raised as the result of a call to
+  ``transaction.manager.commit`` within the "attempts" machinery, the
+  exception was not reraised properly.  Symptom: an unrecoverable exception
+  such as ``Unsupported: Storing blobs in <somestorage> is not supported.``
+  would be swallowed inappropriately.
 
 1.3.0 (2012-05-16)
 ------------------
